--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Inicio</title>
-	<meta charset="utf-8"/>
+    <title>Inicio</title>
+    <meta charset="utf-8" />
 </head>
+
 <body>
-	<div id="caixaLogin">
-		<input type="text" id="login" placeholder="Login">
-		<input type="password" id="senha" placeholder="Senha">
-		<input type="button" id="logar" value="Entrar">
-	</div>	
+    <div id="caixaLogin">
+        <input type="text" id="login" placeholder="Login">
+        <input type="password" id="senha" placeholder="Senha">
+        <input type="button" id="logar" value="Entrar"> jansdjn
+    </div>
 </body>
+
 </html>
