--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
 <head>
     <title>Inicio</title>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="CSS/login.css">
 </head>
 
 <body>
     <div id="caixaLogin">
-        <input type="text" id="login" placeholder="Login">
-        <input type="password" id="senha" placeholder="Senha">
-        <input type="button" id="logar" value="Entrar"> jansdjn
+        <img src="images/login.png" id="image" />
+        <input type="text" id="login" id="tLogin" placeholder="Login"><br>
+        <input type="password" id="senha" id="tPassword" placeholder="Senha"><br>
+        <input type="button" id="bLogar" value="Entrar">
     </div>
 </body>
 
