Alteração do XML
Alteração do XML para inserir as mensagens enviadas e recebidas. Feito uma base da página caixa de entrada.

--- a/Paginas/CaixaEntrada.html
+++ b/Paginas/CaixaEntrada.html
@@ -7,11 +7,23 @@
 </head>
 <body>
 
-	<dir id="menuLateral">
-		<table border="1" class="menu">
+	<div id="head">
+		<input type="text" id="pesquisa">
+	</div>
+
+	<div id="titulo">
+		<table border="1">
 			<tr>
 				<td id="linhaCentro"><a href="">+ Nova Mensagem</a></td>
+				<td colspan="3s" id="linhaCentro"><a href="">Caixa de Entrada</a></td>
 			</tr>
+		</table>
+
+	</div>
+
+	<div id="menuLateral">
+		<table border="1" class="menu">
+			
 			<tr>
 				<td id="linhas"><a href="">Favoritos</a></td>
 			</tr>
@@ -35,7 +47,7 @@
 			</tr>
 		</table>
 
-	</dir>
+	</div>
 
 </body>
 </html>
