Retorno de dados do emails do XML
Implementação do retorno dos dados do XML

--- a/Paginas/CaixaEntrada.html
+++ b/Paginas/CaixaEntrada.html
@@ -4,6 +4,8 @@
 	<title>Email</title>
 	<meta charset="utf-8" />
 	<link rel="stylesheet" type="text/css" href="../CSS/caixaEntrada.css">
+	<script type="text/javascript" src="../JS/jquery.js"></script>
+	<script type="text/javascript" src="../JS/CaixaEntrada.js"></script>
 </head>
 <body>
 
@@ -21,31 +23,18 @@
 
 	</div>
 
-	<div id="menuLateral">
-		<table border="1" class="menu">
-			
+	
+
+		<table id="tabelaMensagem">
 			<tr>
-				<td id="linhas"><a href="">Favoritos</a></td>
+				<td id="titulos"></td>
+				<td id="remetente"></td>
+				<td id="corpoMensagem"></td>
 			</tr>
-			<tr>
-				<td id="linhas"><a href="">Caixa de Entrada</a></td>
-			</tr>
-			<tr>
-				<td id="linhas"><a href="">Lixo Eletrônico</a></td>
-			</tr>
-			<tr>
-				<td id="linhas"><a href="">Rascunho</a></td>
-			</tr>
-			<tr>
-				<td id="linhas"><a href="">Itens Enviados</a></td>
-			</tr>
-			<tr>
-				<td id="linhas"><a href="">Itens Excluidos</a></td>
-			</tr>
-			<tr>
-				<td id="linhas"><a href="">Arquivo Morto</a></td>
-			</tr>
+
 		</table>
+
+		<input type="button" id="Enviadas" value="Enviadas">
 
 	</div>
 
