--- a/Paginas/CaixaEntrada.html
+++ b/Paginas/CaixaEntrada.html
@@ -1,28 +1,37 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Email</title>
-	<meta charset="utf-8" />
-	<link rel="stylesheet" type="text/css" href="../CSS/caixaEntrada.css">
-	<script type="text/javascript" src="../JS/jquery.js"></script>
-	<script type="text/javascript" src="../JS/CaixaEntrada.js"></script>
+    <title>Email</title>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" type="text/css" href="../CSS/caixaEntrada.css">
+    <script type="text/javascript" src="../JS/jquery.js"></script>
+    <script type="text/javascript" src="../JS/CaixaEntrada.js"></script>
 </head>
+
 <body>
 
-		
+    <table id="cabecalho" cellspacing>
+        <tr>
+            <td style="width: 85px"><img src="../images/icone_menu.png" id="image_menu" /></td>
+            <td><input type="text" placeholder="Pesquisar" id="tPesquisar"></td>
+        </tr>
+    </table>
 
-		<table id="tabelaMensagem">
-			<tr>
-				<td id="titulos"></td>
-				<td id="remetente"></td>
-				<td id="corpoMensagem"></td>
-			</tr>
 
-		</table>
+    <table id="tabelaMensagem">
+        <tr>
+            <td id="titulos"></td>
+            <td id="remetente"></td>
+            <td id="corpoMensagem"></td>
+        </tr>
 
-		
+    </table>
 
-	</div>
+
+
+    </div>
 
 </body>
+
 </html>
