--- a/Paginas/CaixaEntrada.html
+++ b/Paginas/CaixaEntrada.html
@@ -5,24 +5,17 @@
 	<meta charset="utf-8" />
 	<link rel="stylesheet" type="text/css" href="../CSS/caixaEntrada.css">
 	<script type="text/javascript" src="../JS/jquery.js"></script>
-	<script type="text/javascript" src="../JS/CaixaEntrada.js"></script>
+	<script type ="text/javascript" src="../JS/MensagensEnviadas.js"></script>
+	<script type ="text/javascript" src="../JS/MensagensRecebidas.js"></script>
+	
 </head>
 <body>
-
-		
-
 		<table id="tabelaMensagem">
 			<tr>
 				<td id="titulos"></td>
 				<td id="remetente"></td>
 				<td id="corpoMensagem"></td>
 			</tr>
-
 		</table>
-
-		
-
-	</div>
-
 </body>
 </html>
