--- a/Paginas/CaixaEntrada.html
+++ b/Paginas/CaixaEntrada.html
@@ -2,25 +2,18 @@
 <html>
 
 <head>
-<<<<<<< HEAD
+
 	<title>Email</title>
 	<meta charset="utf-8" />
 	<link rel="stylesheet" type="text/css" href="../CSS/caixaEntrada.css">
 	<script type="text/javascript" src="../JS/jquery.js"></script>
 	<script type ="text/javascript" src="../JS/MensagensEnviadas.js"></script>
 	<script type ="text/javascript" src="../JS/MensagensRecebidas.js"></script>
-	
-=======
-    <title>Email</title>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="../CSS/caixaEntrada.css">
-    <script type="text/javascript" src="../JS/jquery.js"></script>
-    <script type="text/javascript" src="../JS/CaixaEntrada.js"></script>
->>>>>>> d62dcc96814dfd18abaf7ad3971bb37441d53649
+
+
 </head>
 
 <body>
-<<<<<<< HEAD
 		<table id="tabelaMensagem">
 			<tr>
 				<td id="titulos"></td>
@@ -28,15 +21,15 @@
 				<td id="corpoMensagem"></td>
 			</tr>
 		</table>
-=======
 
-    <table id="cabecalho" cellspacing>
+
+   <!-- <table id="cabecalho" cellspacing>
         <tr>
             <td style="width: 85px"><img src="../images/icone_menu.png" id="image_menu" /></td>
             <td><input type="text" placeholder="Pesquisar" id="tPesquisar"></td>
         </tr>
     </table>
-
+    -->
 
     <table id="tabelaMensagem">
         <tr>
@@ -47,11 +40,13 @@
 
     </table>
 
+    <input type="button" id="logout" value="Logout">
+   <a href="NovaMensagem.html"><input type="button" id="logout" value="Nova Mensagem">  </a>
 
 
     </div>
 
->>>>>>> d62dcc96814dfd18abaf7ad3971bb37441d53649
+
 </body>
 
 </html>
