--- a/Paginas/NovaMensagem.html
+++ b/Paginas/NovaMensagem.html
@@ -11,7 +11,7 @@
 	<input type="text" id="Mensagem" placeholder="Mensagem">
 	<input type="text" id="user" placeholder="Login de Usuario">
 	<input type="button" id="Enviar" value="Enviar">
-	
+	<input type="button" id="voltar" value="Voltar">
 
 	<!-- JavaScript-->
 
