--- a/Paginas/CaixaEntrada.html
+++ b/Paginas/CaixaEntrada.html
@@ -2,67 +2,48 @@
 <html>
 
 <head>
-    <title>Email</title>
+    <title>Index</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="../CSS/caixaEntrada.css">
-    <script type="text/javascript" src="../JS/jquery.js"></script>
-    <script type="text/javascript" src="../JS/CaixaEntrada.js"></script>
+    <link rel="stylesheet" href="../CSS/caixaEntrada.css">
+    <link rel="stylesheet" href="../CSS/login.css">
 </head>
 
-<body>
+<header id="cabecario">
+    <img src="../imagens/icone_menu.png" height="40px" width="numero_largura">
+    <input type="text" id="campoBusca" placeholder="Buscar Email">
+    <button id="buscar">Buscar</button>
+    <button id="logout">Logout</button>
+    <a href="novaMensagem.html"><button id="novaMensagem">Nova Mensagem</button></a>
+    <button id="mensagensEnviadas">Mensagens Enviadas</button>
+    <button id="mensagensExcluidas">Itens Excluidos</button>
+    
+</header>
 
-    <table id="cabecalho" cellspacing="0">
-        <tr>
-            <td style="width: 85px"><img src="../images/icone_menu.png" id="image_menu" /></td>
-            <td><input type="text" placeholder="Pesquisar" id="tPesquisar"></td>
-        </tr>
-    </table>
+<body>    
+    <div id="mensagens">
+        <table border="1">
+            <thead>
+            <tr>
+                <th colspan="4" id="pasta">CAIXA DE ENTRADA</th>
+            </tr>
+            <tr>
+                <th>Remetente</th>
+                <th>Assunto</th>
+                <th>Mensagem</th>
+                <th>Ação</th>
+            </tr>
+        </thead>
+        <tbody>
 
-    <table id="bodyEmail" cellspacing="0">
-        <tr>
-            <td><button id="novaMensagem">+ Nova Mensagem</button></td>
-            <td><b>Caixa de Entrada</b></td>
-        </tr>
-        <tr>
-            <td>
-                <div id="menuLateral" cellspacing="0">
-                    <button class="menuimpar"><img src="../images/icone_menu.png" id="image_menu" style="width: 10%; margin-right:5PX;"><p style="MARGIN: 0;margin-right: 83px;">Favoritos</p></button><br>
-                    <button class="menupar"><img src="../images/icone_menu.png" id="image_menu" style="width: 10%"><p style="MARGIN: 0;margin-right: 64px;">Caixa de Entrada</p></button><br>
-                    <button class="menuimpar"><img src="../images/icone_menu.png" id="image_menu" style="width: 10%"><p style="MARGIN: 0; margin-right: 75px;">Lixo Eletrônico</p></button><br>
-                    <button class="menupar"><img src="../images/icone_menu.png" id="image_menu" style="width: 10%"><p style="MARGIN: 0;margin-right: 104px;">Rascunho</p></button><br>
-                    <button class="menuimpar"><img src="../images/icone_menu.png" id="image_menu" style="width: 10%"><p style="MARGIN: 0; margin-right: 77px;">Itens Enviados</p></button><br>
-                    <button class="menupar"><img src="../images/icone_menu.png" id="image_menu" style="width: 10%"><p style="MARGIN: 0; margin-right: 77px;">Itens Excluidos</p></button><br>
-                    <button class="menuimpar"><img src="../images/icone_menu.png" id="image_menu" style="width: 10%"><p style=" MARGIN: 0;margin-right: 79px;">Arquivo Morto</p></button><br>
-                </div>
-            </td>
-            <td style="width: 100%;">
-                <div id="fundoMensagem">
-                    <table id="tabelaMensagem" cellspacing="0">
-                        <tr class="mensagens">
-                            <td id="pPerfil" style="width: 5%;"><img src="../images/fotoPerfil.png" id="image_menu" /></td>
-                            <td style="width: 25%;"><b id="titulos">ahjsdoih iahsdioh ohasihd</b></td>
-                            <td style="width: 20%;"><b id="remetente">ijdoiajoiha hfoishdoi</b></td>
-                            <td id="corpoMensagem" style="width: 50%;">spjfoisdhfoisho osihfoishdf oisdfons oshdfo isdnfj ubdfuobsof usbdfb</td>
-                        </tr>
-                        <tr class="mensagens">
-                            <td id="pPerfil" style="width: 5%;"><img src="../images/fotoPerfil.png" id="image_menu" /></td>
-                            <td style="width: 25%;"><b id="titulos">Oahjsdoih iahsdioh ohasihd</b></td>
-                            <td style="width: 20%;"><b id="remetente">ijdoiajoi oisdoishdoi</b></td>
-                            <td id="corpoMensagem" style="width: 50%;">spjfoisdhfoisho osihfoishdf oisdfons oshdfo isdnfj ubdfuobsof usbdfb</td>
-                        </tr>
-                        <tr class="mensagens">
-                            <td id="pPerfil" style="width: 5%;"><img src="../images/fotoPerfil.png" id="image_menu" /></td>
-                            <td style="width: 25%;"><b id="titulos">Oioiahjsdoih iahsdioh ohasihd</b></td>
-                            <td style="width: 20%;"><b id="remetente">ijd osdhfoshdoi</b></td>
-                            <td id="corpoMensagem" style="width: 50%;">spjfoisdhfoisho osihfoishdf oisdfons oshdfo isdnfj ubdfuobsof usbdfb</td>
-                        </tr>
-
-                    </table>
-                </div>
-            </td>
-        </tr>
-    </table>
-
+        </tbody>
+        </table>
+    </div>    
 </body>
 
+    <!-- javaScript -->
+
+    <script type="text/javascript" src="../JS/jquery.js"></script>
+    <script type="text/javascript" src="../JS/caixaEntrada.js"></script>
+    <script type="text/javascript" src="../JS/BuscaAssuntos.js"></script>
+    <script type="text/javascript" src="../JS/apagarEmail.js"></script>
 </html>
